--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -18,6 +18,9 @@ jobs:
         with:
             path: node_modules
             key: ${{runner.OS}}-${{hashFiles('**/package-lock.json')}}
+      - run: git submodule init
+      - run: git submodule update
+      - run: npm install hexo-cli -g
       - run: npm install hexo-cli -g
       - run: npm install
       - run: hexo generate
