--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ theme_config:
         about: /about/
         articles: /archives/
     colorscheme: white
-    rss: false
+    rss: atom.xml
     social_links:
         github: https://github.com/FledgeXu
         twitter: https://twitter.com/fledgexu
