--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ subtitle: ''
 description: ''
 keywords:
 author: Fledge Shiu
-language: zh
+language: zh-CN
 timezone: ''
 
 # URL
@@ -105,7 +105,7 @@ theme_config:
         about: /about/
         articles: /archives/
     colorscheme: white
-    rss: atom.xml
+    rss: 
     social_links:
         github: https://github.com/FledgeXu
         twitter: https://twitter.com/fledgexu
