--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -37,6 +37,7 @@ jobs:
             npm install hexo-cli -g
             npm install
             hexo version
+            hexo clean
             hexo generate
             # ipd -p ipfs-cluster -d cloudflare -C -O
       - name: Deploy
