--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,6 +21,10 @@ jobs:
           key: ${{ runner.OS }}-npm-cache
           restore-keys: |
             ${{ runner.OS }}-npm-cache
+      - name: Install Themes
+        run: | 
+            git submodule init
+            git submodule update
       - name: Install Dependencies
         run: npm install
       - name: Build
